--- a/wp-content/plugins/elementor/assets/css/widget-menu-anchor.min20c8.css
+++ b/wp-content/plugins/elementor/assets/css/widget-menu-anchor.min20c8.css
@@ -1,2 +1,2 @@
-﻿/*! elementor - v3.32.0 - 18-09-2025 */
+/*! elementor - v3.32.0 - 18-09-2025 */
 body.elementor-page .elementor-widget-menu-anchor{margin-block-end:0}
